[project]
name = "nist-ekf"
version = "0.1.0"
description = "NIST governance corpus transformed into an Enterprise Knowledge Format demo knowledge base."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.15.0",
  "markitdown>=0.1.6",
  "openpyxl>=3.1.5",
  "pdfplumber>=0.11.10",
  "pypdf>=6.13.3",
  "pyyaml>=6.0.3",
  "requests>=2.34.2",
]
